# Intent-MPC

./: .gitignore  DYNUS_BENCHMARK_ALIGNMENT.md  DYNUS_INTEGRATION.md  NEXT_STEPS.md  TEST_STATUS.md
autonomous_flight/cfg/mpc_navigation/: TUNING_GUIDE.md  fake_detector_param.yaml  flight_base.yaml  generate_straight_trajectory.py  mapping_param.yaml  planner_param.yaml  ref_trajectory_dynus_benchmark.txt  ref_trajectory_straight_line.txt
autonomous_flight/include/autonomous_flight/: mpcNavigation.cpp  mpcNavigation.h
autonomous_flight/launch/: intent_mpc_acl_mapping.launch  intent_mpc_dynus_gazebo.launch  intent_mpc_dynus_nav.launch  intent_mpc_dynus_sim.launch  intent_mpc_dynus_sim_headless.launch
docker/: .dockerignore  BUILD_SUMMARY.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TESTING_GAZEBO.md  acl_forest_sim.yml  benchmark_sim.yml  debug_mpc_avoidance.sh  debug_obstacles.sh  dynamic_sim.yml  dynus_sim.yml  intent_mpc_sim.yml  original_demo.yml  test_dynus.sh  test_full_integration.sh  test_gazebo_flight.sh  test_integration.sh
dynus_obstacles_ros1/: CMakeLists.txt  package.xml
dynus_obstacles_ros1/include/dynus_obstacles_ros1/: dynus_obstacles_node.h
dynus_obstacles_ros1/launch/: dynus_obstacles.launch
dynus_obstacles_ros1/src/: dynus_obstacles_node.cpp  fake_odom_node.cpp
onboard_detector/include/onboard_detector/: fakeDetector.cpp
remote_control/rviz/: mpc_navigation.rviz
scripts/: BENCHMARK_PROMPT_TEMPLATE.txt  BENCHMARK_README.md  DOCKERIZE_BENCHMARK_SKILL.md  analyze_benchmark.py  analyze_mpc_benchmark.py  combine_benchmark_runs.py  postprocess_collisions.py  run_dynus_sim.sh  run_mpc_benchmark.py  test_benchmark_setup.sh  verify_obstacle_avoidance.sh
trajectory_planner/include/trajectory_planner/: mpcPlanner.cpp  mpcPlanner.h
trajectory_planner/include/trajectory_planner/clustering/: obstacleClustering.cpp
uav_simulator/: CMakeLists.txt
uav_simulator/launch/: start_acl_forest.launch  start_dynus.launch
uav_simulator/urdf/: quadcopter_no_camera.urdf
