<?xml version="1.0"?>
<package format="2">
  <name>dynus_obstacles_ros1</name>
  <version>0.0.1</version>
  <description>DYNUS obstacle generation ported to ROS1 for Intent-MPC integration</description>
  <maintainer email="kkondo@mit.edu">Kota Kondo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
